--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "starmap-front",
+  "name": "tacmap-front",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Collective-SB/Starmap-Front.git"
+    "url": "git+https://github.com/Tactical-Starbase/Starmap-UI.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Collective-SB/Starmap-Front/issues"
+    "url": "https://github.com/Tactical-Starbase/Starmap-UI/issues"
   },
-  "homepage": "https://github.com/Collective-SB/Starmap-Front#readme",
+  "homepage": "https://github.com/Tactical-Starbase/Starmap-UIt#readme",
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
